Update VOCUS 2022-07-16 patch

--- a/_posts/2022-07-01-VOCUS-轟天高校生-超古文明尋寶戰.html
+++ b/_posts/2022-07-01-VOCUS-轟天高校生-超古文明尋寶戰.html
@@ -46,4 +46,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">我覺得80、90年代日本動作冒險漫畫有很多大量以神話或科幻小說為輔助的元素，不同於漫威所有神魔鬼怪宇宙人都要納入其中，日本黃金時代漫畫風情往往是採用一個元素或是故事去作延伸和單元劇的概念去敘述一個任務事件。</div>
 <div class="draft-block draft--p left">比起像美漫複雜的人際關係，日漫單純的人物線反而有時候更可以將埋藏的起承轉合給完整的一次性曝光，這樣的震撼度獲刺激性，很讓人著迷。</div>
 <div class="draft-block draft--p left">《轟天高校生》雖然劇情有點套路，畢竟放到現代來看這種主角特工的角色設定其實以不新鮮，英雄救美到處留香的風格更是老掉牙。但我覺得享受這樣二十世紀風情的作品其實也不差。因為最少我覺得2022動畫版的《轟天高校生》有抓到原作的精隨，而非一些舊作為了適應當代新讀者的喜好，把原作改的面目全非。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=WfwzpWhnUUc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/WfwzpWhnUUc"></iframe></div>
