--- a/_posts/2022-07-04-VOCUS-派對咖孔明-軍師穿越玩音樂.html
+++ b/_posts/2022-07-04-VOCUS-派對咖孔明-軍師穿越玩音樂.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/41f49787-6f8d-4331-ae9d-033022bb09a0.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">這讓《派對咖孔明》很可惜動畫開高走低，唯一留下記憶點的反而是洗腦主題曲《チキチキバンバン》，故事內容雖然以孔明計策、英子歌聲和各種有特色的人物不斷登場，但都沒有留下太多很深刻的篇章，反而最剛開始英子在小套房窗邊為孔明唱歌、孔明的回憶殺都比較能有所感動。</div>
 <div class="draft-block draft--p left">而韓國地圖與車牌諧音等案外案，我覺得其實對於這部動畫影響沒有很大，甚至日本維基都未標示這兩起事件，比起這件事，很多人認為作者雖然說喜歡三國但對於孔明描寫跟正史出入很大。但就像前面所補充的《派對咖孔明》的孔明是日本二創又二創又二創後版本的孔明，而日本人的既定對孔明的印象也是如此，故這本漫畫最終還是創造出一個日本人版本的孔明軍師。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=XicdpSmxuT0"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/XicdpSmxuT0"></iframe></div>
