--- a/_posts/2022-07-05-VOCUS-戰地夜曲-戰爭下的平民們.html
+++ b/_posts/2022-07-05-VOCUS-戰地夜曲-戰爭下的平民們.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/9a9b0dc8-a7f7-4380-8fed-78c5654feeef.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">不過不管是大師或是獲獎無數，這部電影的確沒有太多能吸引一般民眾觀看的動力，你說群眾俗氣也好或不懂也罷，這部電影其實跟一般觀眾期待的「戰爭紀錄片」落差度是大的，並且給出好評的多半是電影從業人、文藝人士、閱影無數的影評人，更證實這部電影落入非主流的圈子內。</div>
 <div class="draft-block draft--p left">電影中雖然沒有戰火卻感受到戰爭的恐懼與威脅，這讓我想到如今台海局勢緊張，中國不斷表現出侵略意圖，被政府圈在中國世界內的部分人士喊打喊殺，雖不清楚他們是否了解現於戰爭之下的烏克蘭或中東國家情況，但以支持國家侵略或發起戰爭，不管勝利或失敗都是可恥的。不管是二戰日本軍國主義或希特勒的納粹都一再表達出這論點，如今中國支持戰爭的人民還看不清，那就是不見棺材不掉淚。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=jxKGc0DuRY4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/jxKGc0DuRY4"></iframe></div>
