--- a/_posts/2022-07-06-VOCUS-艾達克淘金熱-金子在哪裡.html
+++ b/_posts/2022-07-06-VOCUS-艾達克淘金熱-金子在哪裡.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/3e2d6303-b98e-4a58-be6c-bbdea94eec4d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">其實對於《艾達克淘金熱》中艾達克島是否有寶藏這點，我本人不是很在意，彈是可以追朔一些小島上當時二戰、冷戰的歷史，我覺得是有趣的一點，另外如何處理炸彈和尋寶探測器與土壤分析等科學地理嘗試也很有意思，其實與其說挖寶，這部更多我覺得是反過宣傳不要到艾達克挖寶會挖到炸彈這件事。</div>
 <div class="draft-block draft--p left">實際來說當成一群小時候聽見傳說寶藏的追夢者，長大後回到家鄉一圓小時候傳說的真相，是一件滿浪漫的事情。就算整個節目都是為了重振艾達克島本地在演戲，好歹也演出了一部探訪當地景點與故事的島上遊記，也未嘗全然難看，目前許多網友、專家學者也試圖在證實格雷戈里．德瓦格斯托夫這名海賊是否真實存在？就等之後相關人士追查的結果吧。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=7fdEqs3fiFw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/7fdEqs3fiFw"></iframe></div>
