--- a/_posts/2022-07-07-VOCUS-re-main-熱血將重頭來過.html
+++ b/_posts/2022-07-07-VOCUS-re-main-熱血將重頭來過.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/8adc8186-8d32-41ba-9f64-0d8011a22dc1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">在《RE-MAIN》動畫裡角色並不如《FREE！男子游泳部》各個討喜並充滿個性與完美身材，抓人眼球。相反他們比較不完美且固執、任性、別有心機不很容易相處，但結合劇情安排才有，彼此不熟悉到熟悉甚至開始合作這點，我認為《RE-MAIN》在節奏與劇本的安排是很完整的。</div>
 <div class="draft-block draft--p left">2022年5月舉辦的《福岡世界游泳賽》就選以水球動畫《RE-MAIN》作為行銷廣告的視覺與宣傳。但以實際面上來看《RE-MAIN》其實並不算成功的動畫，除了一開始的失憶勸退許多觀眾外，角色個性都不太討喜這點，還有沒太多萌點也讓這部動畫抓不太到商業點，比起這點《後空翻少年》在日常角色互動狂灑糖這點，營業角色的手段比《RE-MAIN》高明了不知多少</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=FPT2OY_H8IE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/FPT2OY_H8IE"></iframe></div>
