--- a/_posts/2022-07-09-VOCUS-未來的-熱見未來的無限可能.html
+++ b/_posts/2022-07-09-VOCUS-未來的-熱見未來的無限可能.html
@@ -29,5 +29,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/6f9bbbca-d28e-4e3e-822c-44a61acbf040.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/e9087b98-b725-4ef5-9a20-ae3f51fa4d24.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">我認為這個節目過度樂觀，反倒讓觀眾幫忙憂心起：「真的有你說的那麼順利嗎？」我們看見在全球人臉辨識技術下，中國或其他極權國家反而用這個技術來監控它的人民與意義份子，《未來的》節目所建構下的世界讓我覺得是一個桃源鄉或幻想憧憬下的烏托邦。<br> <br>但就像諾基亞那句廣告語「科技始終來於人性」，如果需要跟節目上同樣的未來，可能不只科學家或是其他研究者，而是在還沒進到未來前的現在就得開始努力朝向世界想要的未來。如同哲學上的未來是一種以當前狀況和歷史去推斷之後可能會發生的事情，現在與未來是緊密的因果關係，而我們當下種了什麼因，後果就在外來上。</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=0hgZPvMU7So"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/0hgZPvMU7So"></iframe></div>
