--- a/_posts/2022-07-11-VOCUS-台灣的人力資源-9.html
+++ b/_posts/2022-07-11-VOCUS-台灣的人力資源-9.html
@@ -10,7 +10,6 @@ author: 王立第二戰研所
 
 <blockquote class="draft-block draft--blockquote">新人得不到好的訓練，加上世代落差，很多文化接不上，彼此之間會更加仇視，前輩覺得新人不受教，新人認為長官只會擺老，這現象在前幾段說的有斷層的產業是更加嚴重。這種對立會加深技術傳承的困難，造成產業內的各種文化摩擦，徒增更多的成本，進一步讓老闆們覺得「缺工」。</blockquote>
 <div><h3><a href="https://vocus.cc/article/62709c77fd89780001c42599">台灣的人力資源（8） | 王立第二戰研所 - vocus</a></h3><span>各位可以了解嗎？在某種程度之下的製造業、商業需要的是穩定的輸出，不是超強的創造與爆發力。沒有義務教育的國家，這種工作靠的是大量無訓練人力去篩選，在台灣已經脫離這種狀況很久下，會去找這類工作的，大多是高職以下，或者說是那些「你應該沒聽過」的高職，說白話點就是成績爛到有剩的那種學生。 傳承不是什麼階級複製啦，就現代來說就是，熟練技工能不能把技術傳給新人。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F526412ad-7950-49aa-90aa-a083462c0681.png%26width%3D1200%26sign%3Dgt2OzH7etVPkprJvzVqwu4CBv6nRmAAsWduZDC-vrag&width=550&sign=bm0VckaMcnvcg_hcD9D-4_ck1k8OmXqbGDungB3CoUE"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">上週說新人倒楣，也不能說真的倒楣，筆者觀察到的，更多是從學生時代養起的習慣。</div>
 <div class="draft-block draft--p left">講白一點，上一代的玩手機遊戲，跟學生玩手遊一樣嗎？人家薪水5萬，買一台iphone跟薪水2.5萬的負擔相同？</div>
 <div class="draft-block draft--p left">筆者想要闡述的第三個概念，是所謂的「基本需求」已經不同了。若你有在一些傳產跟組長吃消夜，聽聽他們的故事，扣掉一些習慣不好的，不少人入行時薪資也不高，物質需求也不多，下班大家喝點小酒，回家看個電視，一天就過去。</div>
@@ -43,7 +42,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">總之，這變成一個惡性循環，期待越高失望也越大，失望導致政治的激進化，但產業結構又不可能因此改變，適應現狀最快的方式是降低求職的希望，但就做不到。</div>
 <div class="draft-block draft--p left">這些都還不提環保跟公衛意識提升，造成產業發展的成本拉高影響，以及大眾運輸越方便，城鄉差距就越大的問題。</div>
 <div class="draft-block draft--p left">大多數低階技術的工作，會去求職的人多在家裡附近去找，沒有特別的人脈網絡，跨縣市流動的風險不低。畢竟這不是「火車漸漸在起走，再會我的故鄉和親戚」那個年代，大家都知道機會在台北。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=gD14iiXq7Xw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/gD14iiXq7Xw"></iframe></div>
 <div class="draft-block draft--p left"><a href="https://zh.wikipedia.org/zh-tw/%E6%96%B0%E8%87%BA%E8%AA%9E%E6%AD%8C%E9%81%8B%E5%8B%95" target="_blank" class="draft--a">新台語歌運動</a>的經典名曲（編）</div>
 <div class="draft-block draft--p left">經歷經濟起飛，台灣都市高速發展的年代，現在的困境是產業分布不均，區域發展失衡。</div>
 <div class="draft-block draft--p left">除非我們認為，低階人力放給他死無所謂，要把稅金用在怎樣提升有競爭力的高階服務業跟科技業。</div>
