--- a/_posts/2022-07-12-VOCUS-紅色褲襪男-特攝感奇葩漫畫作.html
+++ b/_posts/2022-07-12-VOCUS-紅色褲襪男-特攝感奇葩漫畫作.html
@@ -39,4 +39,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/a4736629-8a60-4683-be68-2f0c032c5070.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">一些漫迷有不少人往往都會針對漫畫的人物角色討不討喜？劇情結構嚴不嚴謹？來看待一部作品的優劣，這點其實沒有對錯，但更進一步的來說每個人看待事物的標準往往會有所不同，就算沒有完整的劇情、沒有流行的人物，故意不完整、或缺乏完整，有時候也是一種後現代式的表現主義。</div>
 <div class="draft-block draft--p left">以台灣現階段還是很需要說好故事的商業漫畫，但同時也需要不用管故事而隨意發揮的私漫畫，有些東西繪製出來不是通通都要拿來賣的，抒發與表達自己的創作慾和展現特色也是漫畫的重要一環。我覺得《ガロ》看中這點，給了在日過去網路不普及時，有不一樣需求的讀者、創作者另一管道。如今網路發達，不管你是多麼非主流，相信一定有喜歡此類創作風格的讀者，此刻正在路上。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=6JrE_ZhaQRY"></div>
+<div><iframe src="https://www.youtube.com/embed/6JrE_ZhaQRY"></iframe></div>
