--- a/_posts/2022-07-15-VOCUS-日本無形文化遺產-博多祇園山笠.html
+++ b/_posts/2022-07-15-VOCUS-日本無形文化遺產-博多祇園山笠.html
@@ -73,5 +73,5 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">然後在7月10日以後才會看到抬轎各種動態活動，也是「追山」的開端和各派系比賽的開始，會一直持續到14日，在早晨、下午、晚上、凌晨不間斷不同時間點，都會有許多抬轎活動，也是博多祗園山笠炒熱氣氛的時候。比較不能錯過的是「群山秀」會有各式各樣不同裝飾的轎子一起經過市區遊行，場面非常壯觀。</div>
 <div class="draft-block draft--p left">最後一天是重頭戲會從凌晨一直到天亮，且所有流派系的人都會一起參與，也是最多觀光與地方人士聚集的時間點，也是最終比賽的會場，上面會有大會紀錄每個流派的時間點，並在會後現場拆除山笠，聽說得到山笠的裝飾物會有保佑。同時大家也開始清掃長達兩個禮拜的市容，替傳統活動做一個完美的結束。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/50004469-b61b-48c7-9e5b-2a9ffc7ce4ef.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/PEMBJDdGglY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/PEMBJDdGglY"></iframe></div>
 <div class="draft-block draft--p left">疫情過後，如果想要體驗一次日本民俗風情又不知道如何著手的話，博多祗園山笠是一個滿不錯的選擇，因為配合市容所有的商家和博多城鎮都會推出很多相關的商品與活動優惠來吸引觀光客人潮，也算是一個好看又好玩的日本民俗活動。</div>
