--- a/_posts/2022-07-10-VOCUS-當植物遇上壞環境-長葉茅膏菜與遮住它的惡鄰居.html
+++ b/_posts/2022-07-10-VOCUS-當植物遇上壞環境-長葉茅膏菜與遮住它的惡鄰居.html
@@ -8,7 +8,6 @@ tags: blog
 author: 陳政佑
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　最新一集的「究竟想怎樣」<a href="https://instagram.com/brainhasmouth?igshid=YmMyMTA2M2Y=" target="_blank" class="draft--a">podcast </a>要上線了！這次的受訪者將往臺大生態與演化研究所就讀碩士班，加入高文媛教授實驗室後，會開始進行植物生理生態研究，該領域著重於釐清<span style="font-weight: bold; ">植物與環境間的互動關係</span>，就像在拔河般，歷經長期演化，植物們會因環境不同，發展出獨特的策略，也會因為居住條件改變，而有所對策，他們得努力拉住拔河繩，讓上面的紅線維持在中間，才不會像肉粽一樣整坨被環境拉走，跟世界說掰掰。</div>
 <h3 class="draft-block draft--h3" name="header-4972u">食蟲植物不可怕！長久下來的保育計畫</h3>
 <div class="draft-block draft--p left">　　今天要分享的文章是高教授實驗室去年發表的論文，關於<span style="font-weight: bold; ">食蟲植物與他們的惡鄰居，還有對保育策略的相關建議</span>。在很多冒險故事中，食蟲植物被打造得巨大無比，連人都吃得下去，而在馬力歐遊戲中，也要小心被巨型食人花吞食，不過在人生遊戲裡，大家倒是不用擔心會因為食蟲植物 Game over，我們甚至需要找些方法保護它們。</div>
@@ -20,7 +19,7 @@ author: 陳政佑
 <h3 class="draft-block draft--h3" name="header-bp4p">不要擋住我的陽光！長葉茅膏菜的控訴</h3>
 <div class="draft-block draft--p left">　　長葉茅膏菜具備兩種腺體，長柄跟短柄，上面有黏液可以抓獵物，捕獲目標後，執行後續消化，便能吸收營養，而依據觀察幾乎都是由長柄線體抓到獵物。這樣特殊的物種，族群數量並不多，蓮花寺濕地更是該植物在臺灣本島少數的棲息地，所以找到合適的保育策略相當重要。<br>　　在原生環境中，長葉茅膏菜有許多鄰居，讓它們從原本僅僅10至20公分的身高，為了和伴生植物競爭，取得足夠的陽光資源，竟然能夠長到約50公分，但這樣消耗能量求生存，想必相當辛苦，<span style="font-weight: bold; ">如果我們幫忙修短旁邊的草鄰居，會不會對它們有所幫助？</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/12231973-553b-4fe6-8e6e-a3488095b641.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">蓮花寺棲地環境 ( Huang & Kao 2021)</figcaption></div></div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=lsDY370XbYg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/lsDY370XbYg"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-7sjf8">割草曬太陽，快速成長的最佳良藥</h3>
 <div class="draft-block draft--p left">　　研究的第一步驟是測量三種狀況：<span style="font-weight: bold; ">割草、割草後翻土，還有維持原本條件</span>，看在不同環境下，陽光曝曬程度跟土壤溫度是否有差異，並以此推估旁邊植物產生的遮蔽是否會帶來負面效果。結果發現在不同月份，進行過移除工作的土地，陽光接收量皆明顯較多，但除了五、六月，土壤溫度倒是沒什麼差別，<span style="font-weight: bold; ">但總歸來說，這樣的環境條件差異，會給長葉茅膏菜帶來什麼生存差異嗎？</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/40d15af3-171b-456c-af04-bd3759b87429.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">陽光曝曬程度 (上圖) 與土壤溫度差異 (下圖) ( Huang & Kao 2021)</figcaption></div></div>
@@ -29,11 +28,9 @@ author: 陳政佑
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/f8b96adb-1d01-45fe-bb0d-eb7f04cf735e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">不同溫度下的發芽比例 ( Huang & Kao 2021)</figcaption></div></div>
 <h3 class="draft-block draft--h3" name="header-e73v3">展望未來，期待保育新方法</h3>
 <div class="draft-block draft--p left">　　蓮花寺濕地因為周遭水文環境變化，像是興建水壩，導致當地淤泥問題愈趨嚴重，非食蟲性植物得以蓬勃生長，而且因為是軍事用地，除草、整地的活動並不被允許，從實驗結果來看，我們知道這樣的環境對長葉茅膏菜來說超級糟糕，<span style="font-weight: bold; ">希望在這個研究之後，相應的策略可以被採用，對保育行動帶來幫助</span>！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">追蹤我個人的粉專→</span><a href="https://www.facebook.com/brainhavemouth" target="_blank" class="draft--a">https://www.facebook.com/brainhavemouth</a> <br><span style="font-weight: bold; ">追蹤Sky in the wall</span>→<a href="https://www.facebook.com/skyinthewall" target="_blank" class="draft--a">https://www.facebook.com/skyinthewall</a></div>
 <h2 class="draft-block draft--h2" name="header-cqjra"><span style="font-weight: bold; ">喜歡我的文章按讚追蹤加分享！或是斗內起來！</span></h2>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">也能在留言處提出你的看法喔！</span></div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-9gigm">資料來源：</h3>
 <ol>
   <li class="draft-block draft--li">竹北蓮花寺濕地暫不列地方級重要濕地 中央仍金援保育：<br><a href="https://news.ltn.com.tw/news/life/breakingnews/3407977" target="_blank" class="draft--a">https://news.ltn.com.tw/news/life/breakingnews/3407977</a></li>
