--- a/_posts/2022-07-15-PQ-6月物價指數6-直逼1997金融風暴-韓國不到一年升息6次.html
+++ b/_posts/2022-07-15-PQ-6月物價指數6-直逼1997金融風暴-韓國不到一年升息6次.html
@@ -28,7 +28,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://i0.wp.com/storage.googleapis.com/stateless-34-84-11-249/2022/07/23ac1281-bok_main_office3.jpg?resize=680%2C515&#038;ssl=1" alt="" class="wp-image-108124" srcset="https://i0.wp.com/storage.googleapis.com/stateless-34-84-11-249/2022/07/23ac1281-bok_main_office3.jpg?w=531&amp;ssl=1 531w, https://i0.wp.com/storage.googleapis.com/stateless-34-84-11-249/2022/07/23ac1281-bok_main_office3.jpg?resize=300%2C227&amp;ssl=1 300w" sizes="(max-width: 680px) 100vw, 680px" data-recalc-dims="1" /><figcaption>韓國銀行首爾總行（圖／wiki）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/23ac1281-bok_main_office3.jpg" alt="" class="wp-image-108124" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/23ac1281-bok_main_office3.jpg 531w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/23ac1281-bok_main_office3-300x227.jpg 300w" sizes="(max-width: 680px) 100vw, 680px" /><figcaption>韓國銀行首爾總行（圖／wiki）</figcaption></figure></div>
 
 
 
