--- a/_posts/2022-07-15-INMEDIA-前區議員李志宏擾亂秩序罪成還柙-官-高聲叫罵有意惹人憎恨警方.html
+++ b/_posts/2022-07-15-INMEDIA-前區議員李志宏擾亂秩序罪成還柙-官-高聲叫罵有意惹人憎恨警方.html
@@ -18,7 +18,7 @@ author: 獨媒報導
 <p><strong>官斥李志宏營造警方不專業形象 意圖令現場人士憎恨警方</strong></p>
 <p>劉官續指，警員的行動只是向李志宏了解事件，表現專業，惟李志宏迴避警員的問題，營造警方不專業的形象。加上李高聲叫罵令在場人士聽到其對警方的攻擊，顯示他有意圖令現場人士憎恨警方。</p>
 <p><strong>辯方指李志宏正在監察警方 官拒接納：被告監察屬非法</strong></p>
-<p>辯方指李志宏當時正在監察警方，根據《區議會條例》屬合法辯解，惟劉官不同意。劉官指監察須在不阻礙警方執法的前提下進行，但李志宏的行為對警方造成阻礙，故監察屬非法。劉官續指，區議員並無特權監察警方，而李志宏亦非案發當區區議員，不符合區議會地區性的職能。加上李志宏叫罵等行為非善意（bona fide），故不接納其辯解。</p>
+<p>辯方指李志宏當時正在監察警方，根據《區議會條例》屬合法辯解，惟劉官不同意。劉官指監察須在不阻礙警方執法的前提下進行，但李志宏的行為對警方造成阻礙，故監察屬非法。劉官續指，區議員並無特權監察警方，而李志宏亦非案發當區區議員，不符合區議會地區性的職能。加上李志宏叫罵等行為非真誠（bona fide），故不接納其辯解。</p>
 <p>案件押後至7月28日進行求情。劉官指案情嚴重，期間李志宏須還柙。離開時，李志宏向公眾席的親友點頭及揮手道別。</p>
 <p>控罪指李志宏（25歲，沙田禾輋區議員）於2020年5月24日，在香港銅鑼灣堅拿道東及軒尼詩道交界的公眾地方作出擾亂秩序的行為，即作出喧嘩或擾亂秩序的行為，或使用恐嚇性、或侮辱性的言詞，或派發或展示任何載有此等言詞的文稿，意圖激使他人破壞社會安寧，或其上述行為相當可能會導致社會安寧破壞。</p>
 <p>案件編號：ESCC2480/2020</p>
