--- a/_posts/2022-07-15-INMEDIA-綜援翁違限聚令求分期繳款-警稱可向官申述-結果遭法庭重罰雙倍.html
+++ b/_posts/2022-07-15-INMEDIA-綜援翁違限聚令求分期繳款-警稱可向官申述-結果遭法庭重罰雙倍.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/20220715o.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>一名68歲領綜援的老翁被指違反4人限聚令，被派發定額告票。老翁向警方求情通融分期繳付，獲告知可向法庭申述。老翁最終被告上法庭，雖然他最終認罪，但裁判官施雙倍附加罰款，共罰10,500元。老翁提出上訴，高等法院認為判罰過重，裁定上訴得直並罰款下調至5,000元，法官黃崇厚說道，對不少基層尤其是領綜援的長者而言，要一‍筆過繳付限聚令告票，是財務上的重擔。他促請當局設立機制，讓真正需要的人士有途徑申請繳付罰金處理方式。</p>
-<p>現時違反限聚令獲發5,000元定額罰款告票，如果沒有繳交罰款，執法部門會申請傳票，當局會根據599F限聚令檢控，最高刑罰是罰2.5萬元，及入獄6個月。</p>
+<p>現時違反限聚令獲發5,000元定額罰款告票，如果沒有繳交罰款，執法部門會申請傳票，當局會根據限聚令檢控，最高刑罰是罰2.5萬元，及入獄6個月。</p>
 <p><strong>曾向警方寫求情信 請求分期支付</strong></p>
 <p>上訴人鄭建輝（68歲）在去年8月4日在藍田德田邨，被警方發現在公園處聚集，人數達6男1女，警方向他發出定額罰款通知書。鄭在收到通知書後，沒有繳付定額罰款，只對有關罪行的法律責任提出求情，他希望在繳付方式上可得通融。</p>
 <p>惟因他並非根據條例，提出合法權限或合理辯解，警方最終申請將他告上法庭。鄭最終認罪，並求情每月靠4,000元綜援金為生。他指在收到定額罰款通知書後，曾經寫過求情信給警方，強調自己「不是故意不繳交罰款，而只是沒有錢交」。</p>
