Update VOCUS 2022-07-18 patch

--- a/_posts/2022-07-17-VOCUS-2049年的貓王.html
+++ b/_posts/2022-07-17-VOCUS-2049年的貓王.html
@@ -13,7 +13,7 @@ author: 馬立
 <div class="draft-block draft--p left">上個月底，我去戲院看了《貓王艾維斯》（<span style="font-style: italic; ">Elvis</span>, 2022）。雖然喜歡聽老歌，但我不太會主動去查找歌手的生平事蹟；所以與《波希米亞狂想曲》（<span style="font-style: italic; ">Bohemian Rhapsod</span>, 2018）當時的觀影經驗不同，我是在對貓王的生平毫無所知的狀況下進場觀影的——在看到預告片之前，我甚至不知道他的曲風、姿態都源於美國黑人文化。</div>
 <div class="draft-block draft--p left">作為「好人代表」的湯姆．漢克（Tom Hanks），在片中飾演的經紀人湯姆．帕克上校（Colonel Tom Parker）實際上更像一名反派（或許在現實中歌迷也是這樣認為的），也讓我對故事的預期有些差距——片中，一心想在拉斯維加斯短暫駐唱後開始全球巡迴的艾維斯，卻被帕克基於各種理由與藉口拖延、滯留在拉斯維加斯的酒店中，一待就是好幾年。實際上，艾維斯只有在為了躲避國內輿論與法律問題時，前往德國從軍兩年，此生從未再踏出國土；對於一名全球知名、音樂至今仍然是世界銷量冠軍的「搖滾之王」來說，實在難以想見。</div>
 <div class="draft-block draft--p left">貓王．艾維斯的後半生，幾乎是被囚禁在拉斯維加斯度過的。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/u-pP_dCenJA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/u-pP_dCenJA"></iframe></div>
 <div class="draft-block draft--p left">（電影把上面這個標誌性的回歸LIVE演義得非常好；實際上的LIVE也相當令人動容）</div>
 <div class="draft-block draft--p left">看完電影之後，心情有些沉重。回程的路上，我突然想起了《銀翼殺手2049》（<span style="font-style: italic; ">Blade Runner 2049</span>, 2017）。這部《銀翼殺手》（<span style="font-style: italic; ">Blade Runner</span>,1982）三十五年後的續集，講述了瑞克．戴克（Rick Deckard）在與瑞秋（Rachel）「私奔」三十年後，世局的改變以及新主角Ｋ的「成人」之旅。</div>
 <div class="draft-block draft--p left">電影演到中期，Ｋ終於找到了戴克躲藏的地方；誤以為自己是「複製人之子」的他，也認為戴克是自己的父親，期望父子重逢之餘，也想一吐苦水。於是，Ｋ前往傳聞中因為核污染而不再有人的拉斯維加斯，尋找戴克的蹤跡。</div>
