--- a/_posts/2022-07-17-INMEDIA-前港腳郭建邦六年後再捧盃-助三昇贏丙組聯賽盃冠軍.html
+++ b/_posts/2022-07-17-INMEDIA-前港腳郭建邦六年後再捧盃-助三昇贏丙組聯賽盃冠軍.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20210717k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>三昇擊敗西貢奪得丙組聯賽盃冠軍，前港足代表隊成員郭建邦替三昇入波奠定勝局，這是他自2016年替香港飛馬奪冠後，六年來首個冠軍。他接受《獨媒》訪問指對奪冠表示高興，「自己都無踢職業六年，今次雖然丙組都叫冠軍，幫老細攞到冠軍係好開心嘅事。」</p>
+<img src="https://www.inmediahk.net/files/column_images/20210717k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>三昇擊敗西貢奪得丙組聯賽盃冠軍，前港足代表隊成員郭建邦替三昇入波奠定勝局，這是他自2016年替香港飛馬奪冠後，六年來首個盃賽冠軍。他接受《獨媒》訪問指對奪冠表示高興，「自己都無踢職業六年，今次雖然丙組都叫冠軍，幫老細攞到冠軍係好開心嘅事。」</p>
 <p>現年35歲的郭建邦，南華青年隊出身，曾兩度當選最佳青年球員，在2009至2010年球季成為香港足球明星選舉明星十一人。在2017年，郭建邦與另外5名前香港飛馬球員，包括前足球先生李威廉被廉署起訴，涉嫌串謀詐騙以操控或企圖操控比賽賽果，翌年經區院審訊後裁定罪名不成立。</p>
 <p>郭建邦現職運輸，為百貨公司連卡佛送貨予顧客，表示現時收入不俗。他自2019年起效力奇峰，及三昇前身瑞豐環球評估，指老闆投資兩年多，但受疫情影響仍原地踏步，「丙組都好啦，都叫攞咗冠軍先。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/37Y5i082o3" title="DSC_9178"><img src="https://live.staticflickr.com/65535/52222311424_d48c65c44f_z.jpg" height="427" alt="DSC_9178" /></a></p>
