--- a/_posts/2022-07-18-INMEDIA-阿棍屋深水埗開免費診所-為流浪動物提供醫療.html
+++ b/_posts/2022-07-18-INMEDIA-阿棍屋深水埗開免費診所-為流浪動物提供醫療.html
@@ -20,6 +20,7 @@ author: 獨媒報導
 <p>有意申請的市民可向診所申請，將獲安排家訪或落區了解動物的身體狀況等，而在診所治療的動物最終都會由義工帶走。她指診所目前正為義工進行登記，最少已有200人申請。</p>
 <p><strong>義工讚診所降救治流浪動物門檻 </strong></p>
 <p>診所昨日（7月17日）亦舉辦開幕儀式，邀請多名嘉賓到場，包括毛記電視主持「東方昇」、時富金融服務集團有限公司執行董事及副行政總裁關廷軒。在「阿棍屋」當義工超過四年的程生程太，今日帶同在組織領養的寵物嘟嘟到場支持。程太讚賞診所的理念「偉大」，指寵物治療的費用極高昂，「流浪動物係冇錢，冇呢個權利去睇病。」她又認為「好多人有善心，但未必有經濟能力」，診所的開設能降低救治流浪動物的門檻，亦為牠們提供被拯救的機會。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7i96EpU9Jf" title="293618108_10159465147259094_1393790869302961004_n"><img src="https://live.staticflickr.com/65535/52224829279_a020df64fb_z.jpg" alt="293618108_10159465147259094_1393790869302961004_n" /></a><br /><em>記者會由前灣仔區議會主席楊雪盈主持，她亦製作陶瓷紀念杯予出席嘉賓</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5Sx70qC6f4" title="無標題"><img src="https://live.staticflickr.com/65535/52222305715_540624e830_z.jpg" alt="無標題" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M746VfmDap" title="程生程太"><img src="https://live.staticflickr.com/65535/52220808067_02d18d69ee_z.jpg" alt="程生程太" /></a><br /><em>「阿棍屋」義工程生程太</em></p>
 </div></div></div>
