--- a/_posts/2022-07-18-PQ-斯里蘭卡總統逃往新加坡-拉賈帕克薩家族衰落後人民苦難將終結.html
+++ b/_posts/2022-07-18-PQ-斯里蘭卡總統逃往新加坡-拉賈帕克薩家族衰落後人民苦難將終結.html
@@ -28,7 +28,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-1024x381.jpg" alt="" class="wp-image-101534" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-1024x381.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-300x112.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-768x285.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>20年來，斯里蘭卡的拉賈帕克薩家族幾乎掌控了斯里蘭卡的政治經濟領域，勢力龐大。<br>圖／India Today</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-1024x381.jpg" alt="" class="wp-image-101534" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-1024x381.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-300x112.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156-768x285.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/a4cab805-rajab_011615115156.jpg 1200w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>20年來，斯里蘭卡的拉賈帕克薩家族幾乎掌控了斯里蘭卡的政治經濟領域，勢力龐大。<br>圖／India Today</figcaption></figure></div>
 
 
 
