Update VOCUS 2022-07-20 patch

--- a/_posts/2022-07-19-VOCUS-改變你的心智-是解藥還是毒藥.html
+++ b/_posts/2022-07-19-VOCUS-改變你的心智-是解藥還是毒藥.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2230171b-9bf0-4a8e-8433-eb3133a2ed63.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">故我其實認同裡面其中一點，就是當代人如果要將這些迷幻藥劑做為治療或娛樂使用，就應該知道「怎麼使用」，而不是隨便的使用過量、過猛的藥劑而成悲劇。在過去我們從新聞媒體報導下看到許多喀藥的悲劇，那麼反過我們就該思考學習如何正確使用致幻藥濟，是你想要用藥品來娛樂自己必備的需學習的知識。</div>
 <div class="draft-block draft--p left">雖然很多人覺得這部節目只敘述關於迷幻藥劑那美好、醫療實驗上成功的案例。但我認為多理解這些藥物會在你身上造成何種效果其實沒有損失。重要的是知道並了解它，而是否認同開放或做為娛樂性使用，每個人的觀點不同，但很好理解的是當你不守藥物的使用規矩：做死的是你，而不是本身帶有幻覺的蘑菇。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/X8LRb4jfZ9g"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/X8LRb4jfZ9g"></iframe></div>
