--- a/_posts/2022-07-19-INMEDIA-的士團體政總外抗議促李家超修例-轟uber每日搶2,100萬生意.html
+++ b/_posts/2022-07-19-INMEDIA-的士團體政總外抗議促李家超修例-轟uber每日搶2,100萬生意.html
@@ -16,7 +16,12 @@ author: 獨媒報導
 <p>團體亦表示，Uber 以海外公司及連帶關聯公司在港經營，卻沒有向稅務局登記，不滿過去六年涉及漏税高達20億元，又質疑部份外資網約車公司的伺服器在外國，令港人的私隱資料未能得到保障，要求李家超徹查及跟進。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Z7t0g72Y1w" title="無標題"><img src="https://live.staticflickr.com/65535/52225131917_81d6970910_z.jpg" alt="無標題" /></a></p>
 <p><strong>親身坐Uber後向警方報案  要求局方修例</strong></p>
-<p>黃永忠對記者稱，今年2月親自坐Uber，其後向警方報案，投訴對方非法經營載客取酬。警方回覆稱會控告該司機，但黃永忠表示是要投訴Uber，認為對方涉及欺詐。他「慨嘆」，現行欠法例追究Uber，促運輸及物流局按業界建議修例。《獨媒》已向局方查詢，正等候回覆。</p>
+<p>黃永忠對記者稱，今年2月親自坐Uber，其後向警方報案，投訴對方非法經營載客取酬。警方回覆稱會控告該司機，但黃永忠表示是要投訴Uber，認為對方涉及欺詐。他「慨嘆」，現行欠法例追究Uber，促運輸及物流局按業界建議修例。</p>
 <p>對於官員「收黑」，黃永忠則指法國已有「類似」情況，Uber 曾與時任經濟部部長馬克龍有秘密交易，認為當局應認真調查香港是否有同類情況，促李家超「逐個逐個去查」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/K6454f0Wxf" title="無標題"><img src="https://live.staticflickr.com/65535/52226135471_60a1096d24_z.jpg" alt="無標題" /></a></p>
+<p>運輸署：已建議非法取酬載客最高罰款額</p>
+<p>運輸及物流局回覆《獨媒》查詢，指運輸署已就非法出租或取酬載客罪行的罰則進行檢討，建議提高最高罰款額，由現時就首次定罪判處的第2級罰款（5,000元）及再次定罪的第3級罰款（10,000元），分別增至第3級罰款（10,000元）及第4級罰款（25,000元）；以及延長暫時吊銷車輛牌照和扣押車輛的期限，把吊銷期及扣押期由現時首次定罪判處的3個月及再次定罪的6個月，分別增至6個月及12個月。</p>
+<p>局方亦重申按《道路交通條例》第52條，任何人士不得駕駛或使用汽車；或容受或允許他人駕駛或使用汽車以作出租或取酬載客用途，除非該車輛符合《條例》訂明的若干條件，例如領有有效的出租汽車許可證，否則即屬違法。</p>
+<p>運輸及物流局表示，現時法例並無禁止任何人透過其他人士或機構，包括「網約」車出租平台，安排出租汽車服務；當局歡迎利用新科技，包括使用互聯網或流動應用程式召喚／預約合法的交通服務，但在使用新科技或新平台的同時，須遵守現有法規，以保障乘客的安全及利益、確保道路的有效使用，以及確保現時有超過九成市民使用的公共交通系統的高效可靠及長遠健康發展。</p>
+<p>局方又指出，一直十分關注非法出租或取酬載客的情況，已採多管齊下的方式，包括執法、教育及宣傳，打擊有關非法活動。而在執法方面，警方一直採取針對性執法行動，以及對接獲的轉介和投訴個案展開調查和跟進行動，以打擊非法出租或取酬載客活動。在宣傳及教育方面，運輸署透過不同渠道，宣傳如何辨別非法租車服務；並推出網上查詢系統，讓市民查詢車輛是否獲發有效的出租汽車許可證。運輸署提醒市民，用作非法出租或取酬載客的車輛，其第三者風險保險可能失效。</p>
 </div></div></div>
