Update VOCUS 2022-07-21 patch

--- a/_posts/2022-07-20-VOCUS-alternate-交會的瞬間-app上的你.html
+++ b/_posts/2022-07-20-VOCUS-alternate-交會的瞬間-app上的你.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">不過這本小說好處雖是加藤成亮是用日劇化、綜藝化的形式去構成故事，很有畫面感，但同樣也限縮裡面故事角色給人的期待感，例如新見蓉的故事是最為完整的故事線、伴凪津則能理解為當代手機依賴少女的煩惱、但反而作為男性楤丘尚志的故事是裡面較為鬆散，交集也不如前兩者，在群像劇中這是很可惜的一點。</div>
 <div class="draft-block draft--p left">雖然網路上有批評小說中的「alternate」高中生社交APP過於美好，真正的社群平台並不如小說敘述如此，但我認為《alternate：交會的瞬間》整理上比起描繪APP本身的網路世界觀系，更多是描繪透過APP而了解了自己更多青春成長物語。</div>
 <div class="draft-block draft--p left">「有些事情可能隨著時間開始、不變、或結束，但重點是我們對自己又了解了一些。」我想這是《alternate：交會的瞬間》小說可愛之處，不管是陷入社交平台的或是不會用社交平台的我，網路世界既不是全部但我把某一部分留在了那雲端裡。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ZU40ECVOTG4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ZU40ECVOTG4"></iframe></div>
