--- a/_posts/2022-07-20-PQ-與黑狗共舞-再談憂鬱症與諮商.html
+++ b/_posts/2022-07-20-PQ-與黑狗共舞-再談憂鬱症與諮商.html
@@ -40,7 +40,7 @@ author: 施 又熙
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-768x1024.jpg" alt="Depression &amp; thinking" class="wp-image-108573" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-1152x1536.jpg 1152w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking.jpg 1500w" sizes="(max-width: 576px) 100vw, 576px" /><figcaption>圖／Envato Elements</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-768x1024-1.jpg" alt="" class="wp-image-108652" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-768x1024-1.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1c224d0f-depression-thinking-768x1024-1-241x300.jpg 241w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>圖／Envato Elements／報呱製圖</figcaption></figure></div>
 
 
 
