--- a/_posts/2022-07-21-INITIUM-影像-火车停驶-山火频发-极端热浪下的欧洲.html
+++ b/_posts/2022-07-21-INITIUM-影像-火车停驶-山火频发-极端热浪下的欧洲.html
@@ -5,7 +5,7 @@ date: 2022-07-21 00:55:00.000000000 +00:00
 link: https://theinitium.com/article/20220722-international-heat-wave-in-europe/
 categories: initium
 tags: blog
-author: 端传媒实习记者 包正榕
+author: 端传媒摄影组、端传媒实习记者 包正榕 发自新加坡
 ---
 
 <p>「在气候变化下，欧洲会愈来愈热，极端热浪持续的时间也会愈来愈长。」</p><p>端传媒摄影组、端传媒实习记者 包正榕 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220722-international-heat-wave-in-europe/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/f88fd27101624803b8264156355d5c93.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="2022年7月18日，英国伦敦白金汉宫外，一名警员给一位站岗的御林军喝水。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
