--- a/_posts/2022-07-22-PQ-日本經濟安保法-調查20尖端技術領域-再篩出-特定重要技術.html
+++ b/_posts/2022-07-22-PQ-日本經濟安保法-調查20尖端技術領域-再篩出-特定重要技術.html
@@ -20,7 +20,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave.jpeg" alt="" class="wp-image-84503" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave.jpeg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave-768x512.jpeg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>量子電腦的基礎理論和技術雖然是由日本人提出，但首先推出商業化量子電腦的卻不是日本。<br>（圖／D-Wave）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave.jpeg" alt="" class="wp-image-84503" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave.jpeg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/de37b295-d-wave-768x512.jpeg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>量子電腦的基礎理論和技術雖然是由日本人提出，但首先推出商業化量子電腦的卻不是日本。<br>（圖／D-Wave）</figcaption></figure></div>
 
 
 
