Update VOCUS 2022-07-23 patch

--- a/_posts/2022-07-22-VOCUS-what-gives-什麼給-給什麼-什...什麼意思啦-這英文到底怎解.html
+++ b/_posts/2022-07-22-VOCUS-what-gives-什麼給-給什麼-什...什麼意思啦-這英文到底怎解.html
@@ -8,14 +8,29 @@ tags: blog
 author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1490191943407-e44bafe496ac?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE1Nnx8Y3Jhenl8ZW58MHx8fHwxNjU3ODExMDQy&ixlib=rb-1.2.1&q=80"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">When you hear "what gives?" and you're like "huh?"</figcaption></div></div>
 <div class="draft-block draft--p left">這標題出現一堆問號，就像許多英文學習者第一次遇到這句英文時滿頭問號一樣。外國人問你「What gives?」，什麼給不給的，到底是哪招？如果你也那樣想，你就被英文字騙走啦～這是英文很表裡不一的經典俚語，這篇帶你解鎖它的奧義。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-ad273">「What gives」的皮囊底下藏什麼料?</h2>
 <div class="draft-block draft--p left">這句英文，骨子裡根本不是英文來著！See？所以你硬是照著字面理解它反而越鬼打牆。就用照妖鏡還原它的真身。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft-block draft--p left">雖然學術界尚未正式證實，但目前比較普遍流傳的論點是，「<span style="text-decoration: underline; ">What</span> <span style="font-weight: bold; ">gives</span>？」是從德文的「<span style="text-decoration: underline; ">Was</span> <span style="font-weight: bold; ">gibt's</span>?」(<a href="https://forvo.com/word/was_gibt%27s%253F/#en" target="_blank" class="draft--a">按我聽發音</a>)直接以諧音借用到英文的。它們倆的發音雖然不全然一樣，但有幾分神似。</div>
+<div class="draft-block draft--p left">德文「Was gibt's?」翻成英文意思類似「What's up?(有啥新鮮事嗎？) What's going on？(發生什麼事？)」可用來向人打招呼，問別人最近怎麼樣。</div>
+<div class="draft-block draft--p left">後來這句話流傳進英文，不過被英文扭轉了原本的用法。原本「Was gibt's?」主要是用來打招呼的，被借用成英文的「What gives？」之後，意思變成了「是怎樣啊？是哪招啊？是怎麼回事啦？搞什麼啦？」。</div>
+<h2 class="draft-block draft--h2" name="header-537u9">怎麼使用「What gives？」</h2>
+<div class="draft-block draft--p left">「What gives？」主要用來表達對某件事感到不解。有時是單純的不懂為什麼，只想了解原因 (屬於中性的情緒)；有時則是因為不解，而有所埋怨 (屬於負面情緒)。這就是「What gives？」的語感。</div>
+<div class="draft-block draft--p left">例如這年頭許多人的「薪」情差，大家的心聲可能是：</div>
+<blockquote class="draft-block draft--blockquote">Prices(價格) are up but our salaries(薪水) are flat(平坦的、不漲不跌的、持平的). So what gives?</blockquote>
+<blockquote class="draft-block draft--blockquote">價格喊漲但薪水凍漲，到底是怎麼回事？(是怎樣啦)</blockquote>
+<div class="draft-block draft--p left">當別人本來答應要來找你，最後卻突然放你鴿子：</div>
+<blockquote class="draft-block draft--blockquote">What gives? I thought(想、以為) you said(說) you were coming(來).</blockquote>
+<blockquote class="draft-block draft--blockquote">啊你怎麼不來了？我以為跟我講說正要過來。</blockquote>
+<div class="draft-block draft--p left">當你抓包對方亂講你壞話：</div>
+<blockquote class="draft-block draft--blockquote">A birdie(小小鳥) told(告訴) me that you are stabbing(刺、捅) my back(背部) with(透過) some(某個) weird(古怪的) talk(談話). What gives, dude(老兄)?</blockquote>
+<blockquote class="draft-block draft--blockquote">有人向我通風報信說你在我背後捅一刀說了什麼奇怪的話。老兄你是怎樣啊？</blockquote>
+<div class="draft-block draft--p left">面對不解的現象時：</div>
+<blockquote class="draft-block draft--blockquote">From(從) Jim Carrey(金凱瑞) to Bruce Willis(布魯斯威利), the list(名單) of celebrities(名人) retiring(退休) are getting(變得) longer(更長的). So what gives?</blockquote>
+<blockquote class="draft-block draft--blockquote">從金凱瑞到布魯斯威利，退休名人的名單越拉越長，到底怎麼回事？</blockquote>
+<div class="draft-block draft--p left">我們也可以在what gives後面加上介系詞with，再銜接某某人，來詢問某某人發生了什麼事？</div>
+<blockquote class="draft-block draft--blockquote">What gives with Jim and Tom? Why aren't they talking?</blockquote>
+<blockquote class="draft-block draft--blockquote">吉姆和湯姆之間發生什麼事了，為什麼他們彼此不講話？（不解為什麼失和）</blockquote>
+<div class="draft-block draft--p left">（先聲明，這一段寫的文字是我自己的聯想密技，不代表正確的英文理解方式）當初遇到這句英文時，我想了一個讓自己記得住的招數。不如把「What gives？」聯想成「What gives this(這件事)？」，是什麼給予了(造成了、帶來了)這種結果。當我們不解地問：「到底是怎麼回事？」，就是在問是什麼帶來了這種結果。這樣好記多了吧？</div>
+<div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果有幫助你拓展外文視野，如果你喜歡我作品，懇請訂閱並追蹤我的「擊破你的怪怪英日文」專題！所有生活好用的英日文都完整收錄在此專題中喔！ 🙏🙏🙏</div>
