--- a/_posts/2022-07-22-VOCUS-朵貝的愛情繪本-女畫家的秘密.html
+++ b/_posts/2022-07-22-VOCUS-朵貝的愛情繪本-女畫家的秘密.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">如果以一些對於社會倫理的標準來說，你可能會覺得朵貝其實同於她的戀人薇薇卡一樣，並未有固定的情人，在資料上也的確如此，朵貝男女之間的情慾糾結的人士有很多，電影裡只是取決幾位她人生中最重要的情人們，而她與薇薇卡和其他人也一直是友人關係。</div>
 <div class="draft-block draft--p left">不管要把這部片子當成女同志電影或是情感電影其實都是可行的，但我自己會把這部《朵貝的愛情繪本》當成一部，藝術家在情慾和自我創作間的迷惘到成熟，她從一個等待被愛的人，成為不再空等愛的人。也發現自己終究離不開藝術，也終究希望被她心裡最重要的那個人肯定自己的成就。</div>
 <div class="draft-block draft--p left">不過也許也因為朵貝有了這段起起府府精彩的感情史和人生摸索，嚕嚕米才能誕生讓我們看見，這位才女腦袋隨筆的奇幻異想世界。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/87xzMpHFcR4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/87xzMpHFcR4"></iframe></div>
