--- a/_posts/2022-07-21-INMEDIA-藍奕邦7.21出新歌-竇-講圍爐-專頁貼警員轉身離開元朗站圖片.html
+++ b/_posts/2022-07-21-INMEDIA-藍奕邦7.21出新歌-竇-講圍爐-專頁貼警員轉身離開元朗站圖片.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/07212300-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>歌手藍奕邦今日推出新歌《竇》，歌曲講述「圍爐」。他昨晚在社交網站Facebook 專頁貼出2019年反修例運動元朗7.21事件中，兩名警員轉身離開元朗站，及新歌MV的截圖作比對。</p>
-<p>《竇》由藍奕邦、Cheryl作曲，小克填詞，並與從美國返港的獨立音樂人Cheryl 合唱。藍奕邦指，與Cheryl在中學時代為mentorship 關係，多年後成為創作夥伴。</p>
+<p>《竇》由藍奕邦、Cheryl作曲，小克填詞，並與從美國返港的獨立音樂人Cehryl 合唱。藍奕邦指，與Cehryl 在中學時代為mentorship 關係，多年後成為創作夥伴。</p>
 <p>歌詞中有「交際網絡發表你心跡，很怕攻擊怕傷害」、「有些話不放公海，有些話積壓於心內」、「但有人透爐，圍著取暖」、「時代大力壓下，雲霧內但覺安全」、「邀你入這秘密角落」及「不靠大台，你不要猜揣」等字眼。</p>
 <p><strong>903今午首播  梁文禮嘆港人要小心網上言行</strong></p>
 <p>在MV中，兩名女子在多個地方遊走，直至在秘密角落才毫無保留做自己。歌曲今午在商台叱咤903《叱咤樂壇》首播，主持梁文禮亦指今日是7.21。</p>
