--- a/_posts/2022-07-23-INMEDIA-蔡瀾質疑入境須檢疫七日欠理據-斥-我唔想鬧人.html
+++ b/_posts/2022-07-23-INMEDIA-蔡瀾質疑入境須檢疫七日欠理據-斥-我唔想鬧人.html
@@ -27,6 +27,6 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/gB8J63nt43" title="DSC_9940"><img src="https://live.staticflickr.com/65535/52236173450_0d522694e5_z.jpg" alt="DSC_9940" /></a></p>
 <p><strong>被問如何成蔡瀾般瀟灑 「沒有付出就沒有接受」</strong></p>
 <p>多名年輕粉絲問到蔡瀾的生活之道，包括工作、生活平衡，及如何成為他般瀟灑。蔡瀾則認為必須先付出，做好學問、孝順父母及努力賺錢，才能創造經濟條件，「沒有付出就沒有接受」、「努力賺多啲錢，經濟基礎穩定咗，大家覺得好辛苦好辛苦，都唔夠我嗰個年代辛苦。」</p>
-<p>蔡瀾說，上一代在舊時打兩份工十分正常，「晚黑坐的士你唔可以同的士佬嘈，因為呢個的士佬朝頭早可能打多一份工做差人。」蔡瀾建議，年輕人應爭取所有賺錢機會，笑言打好經濟基礎不難，但能否持續則有困難，「千金散盡還復來還復來搵笨？你搵更加多囉，呢個倪匡講。」</p>
+<p>蔡瀾說，上一代在舊時打兩份工十分正常，「晚黑坐的士你唔可以同的士佬嘈，因為呢個的士佬朝頭早可能打多一份工做差人。」蔡瀾建議，年輕人應爭取所有賺錢機會，笑言打好經濟基礎不難，但能否持續則有困難，「千金散盡還復來搵笨？你搵更加多囉，呢個倪匡講。」</p>
 <p>有粉絲問到當遇上不快及困難，會如何處理。蔡瀾同意應「閂埋門喊」，自言和倪匡均是帶歡樂予群眾的人，而不是帶來悲哀，「就算係，嗰啲安慰到假假地，你都唔想聽，我絕對唔同人哋講。」</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
