--- a/_posts/2022-07-24-PQ-下飛機40分鐘就折返-日本-紋別touch修行僧-協助維持航線.html
+++ b/_posts/2022-07-24-PQ-下飛機40分鐘就折返-日本-紋別touch修行僧-協助維持航線.html
@@ -36,7 +36,7 @@ author: 陳怡菱
 
 
 
-<p>該公司的副社長中島和彦說「<strong>紋別市的醫院有從東京出差過來的醫生，因為疫情減班會讓這裡的醫療出問題</strong>。然後知道有『修行僧』，為了維持航線，就想了一些會讓他們想來的企劃。也拜託寫過飛機旅行書籍的拉丁音樂家 Paradise 山本和 ANA 來幫忙」</p>
+<p>該公司的副社長中島和彦說「<strong>紋別市的醫院有從東京出差過來的醫生，如果因為疫情而減班會讓這裡的醫療出問題</strong>。然後知道有『修行僧』，為了維持航線，就想了一些會讓他們想來的企劃。也拜託寫過飛機旅行書籍的拉丁音樂家 Paradise 山本和 ANA 來幫忙」</p>
 
 
 
