--- a/_posts/2022-07-23-INITIUM-2022香港书展直击-十室九空-香港搞成这样-香港书展还能好吗.html
+++ b/_posts/2022-07-23-INITIUM-2022香港书展直击-十室九空-香港搞成这样-香港书展还能好吗.html
@@ -19,18 +19,7 @@ author: 特约撰稿人 森恩 发自香港
 <figcaption itemprop="caption">2022年7月22日，第32届香港书展的入场市民。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
 
 <h2>少了敏感书之后又如何？</h2>
-<p>首天书展读者疏落零散，跟2019年以前那种如水如鲫的塞人状态，自难相比；比较上届我来采访揭幕日的情况，今届目测则只有更少读者进场，这当然是受著学生未放假的影响，同时也反映一个现实：内地读者持续缺席的香港书展，需要寻找更多经营手法。</p>
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
+<p>首天书展读者疏落零散，跟2019年以前那种如水如鲫的塞人状态，自难相比；比较上届我来采访揭幕日的情况，今届目测则只有更少读者进场，这同时反映一个现实：内地读者持续缺席的香港书展，需要寻找更多经营手法。</p>
  
  
  
@@ -51,7 +40,20 @@ author: 特约撰稿人 森恩 发自香港
  
  
  
-<p>而今届开始<a href="https://theinitium.com/article/20220722-culture-how-hk-indie-press-in-difficulty/">拒绝一些书商进场</a>，应该是最瞩目也最受关注的举措？此举可说是相当成功，吸引香港仅余的传媒追访，亦衍生另类书展如以山道文化为首的“香港人书展”得以策展，虽然最后是取消实体书展改为线上举行。</p><p>昔日各大书商因香港书展抽签或圈选而产生大量“花生”：如某出版集团长期占领显著摊位、小出版社成立联盟成功占据有利位置⋯⋯由此形成了大家在有限空间争夺席位的行业气氛。当年一摊难求，只要跻身书展之列，自可踏出业务成功第一步。今届参展书商明显减少，在主场馆Hall 1有不少空置摊位，用摊位背板封起来的空间，目测、保守地估计，占场馆至少七份一（Hall 1E尽头空空如也）。</p><p>
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>人流减少当然也因少了学生入场。一方面学生未放假；另一方面关乎打针政策的更改，以我所知，曾有学校老师筹备带领学生进场参观，可是政府由“两针”改为“三针”政策，学生大都无法立即直接预约打针，导致活动不得不取消。或有人以为今次人潮减少，真凶之一可能正是政府忽然改变的防疫政策？</p><p>到了周末两日，书展人流显著增加，媒体镜头又开始捕捉排队人潮，而那些画面其实并不包括坐在旁边空落无人租用的摊位里正在小憩的读者。今届多了这般小憩空间，也消化了昔日堵塞在小巷间的人海。</p><p>而今届开始<a href="https://theinitium.com/article/20220722-culture-how-hk-indie-press-in-difficulty/">拒绝一些书商进场</a>，应该是本次书展最瞩目也最受关注的举措？此举可说是相当成功，吸引香港仅余的传媒追访，亦衍生另类书展如以山道文化为首的“香港人书展”得以策展，虽然最后是取消实体书展改为线上举行。</p><p>昔日各大书商因香港书展抽签或圈选而产生大量“花生”：如某出版集团长期占领显著摊位、小出版社成立联盟成功占据有利位置⋯⋯由此形成了大家在有限空间争夺席位的行业气氛。当年一摊难求，只要跻身书展之列，自可踏出业务成功第一步。今届参展书商明显减少，在主场馆Hall 1有不少空置摊位，用摊位背板封起来的空间，目测、保守地估计，占场馆至少七份一（Hall 1E尽头空空如也）。</p><p>
 </p><p>在这七份一被封起来的空间当中，会包括2019年以前，何韵诗出书、参展的那种空间吧，那时她的摊位常排长龙。今日何韵诗三字几近成为这个社会的禁语。</p>
 <p></p><p>在这七份一（1/7）当中，会包括2019年以前，何韵诗出书、参展的那种空间吧，那时她的摊位常排长龙。今日何韵诗三字几近成为这个社会的禁语。还有山道文化、蜂鸟出版等新锐出版组织，去年闪现历史书写新声，香港历史有了新生代参与编写，也不是没有可讨论的内容，编得出来已是诚意可嘉。而正因一系列书籍的出版，反证年前书展仍是个尚有些限度的出版自由之地。</p><p>而今新锐出版社被消失后，又由谁来接力？今届书展又有贩卖“集体记忆”的摊位，用小量霓虹装置（三联、青协）铺陈，成为显著的打卡位。它们表现了七八十年代香港民风与地景，只是其下方的出版物却仍如旧贯，无甚创意。</p><p>另一方面，今年少了“敏感书”，却有了不少创意之作，香港漫画家利志达搞大型桌游、年轻人搞甲骨文卡牌桌游，更有创造馆推出各类青少年读物，还见香港中文大学出版社推出“张爱玲在香港”的专著、香港文学生活馆推出黄念欣专栏结集。他们守护的记忆有远有近，值得读者留意。</p><p><a class="image" href="https://theinitium.com/article/20220724-culture-hongkong-book-fair-2022/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/2d1ae1c5ae69460fac6fafc9f7443473.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月22日，第32届香港书展，不少大型连锁书店的摊位都在显眼处摆放有关国家主席习近平的书籍。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年7月22日，第32届香港书展，不少大型连锁书店的摊位都在显眼处摆放有关国家主席习近平的书籍。<span class="credit">摄：林振东/端传媒 </span></figcaption><p></p><p>文化抗争的效用</p><p>
