Update VOCUS 2022-07-26 patch

--- a/_posts/2022-07-25-VOCUS-stray-橘貓與牆內之城的秘密.html
+++ b/_posts/2022-07-25-VOCUS-stray-橘貓與牆內之城的秘密.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b11f4b75-108b-4bfb-9047-ff519d0214d4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">我覺得故事整體性是可預料的反烏托邦和未來末世風格，但結合貓咪與機器人這點加強了在這硬核世界觀的可愛性，唯一可惜的是遊戲的時間小短，在躲避與追擊敵人的玩法前期和後期兩個部分是分開的，最後沒有再增加新的玩法會讓人小小的失望。</div>
 <div class="draft-block draft--p left">但整體來說作為一個小品動作冒險遊戲《Stray》是很出色的，操縱貓咪來遊玩這個想法替遊戲加分很多，但其他的細節部分也不馬虎，尤其是遊戲故事結合貓咪與人工智能兩邊的遊玩方式，展現出很出色的互動內容跟世界觀。讓人期待接下來BlueTwelve Studio工作室會為玩家帶來什麼有趣的新遊戲。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/fOm_9N9ksBY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/fOm_9N9ksBY"></iframe></div>
