--- a/_posts/2022-07-25-VOCUS-習近平的政治-遺產.html
+++ b/_posts/2022-07-25-VOCUS-習近平的政治-遺產.html
@@ -8,4 +8,13 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>民主制度的最大缺點，就是領導人會常常更換，導致政策難以連續，一些短視近利的政客，更因此投資炒短線，以嘩眾取寵的方式，騙取選票。但是任期制也是民主制度的最大優點，再糟的領導人也只能幹到任期屆滿，通常接任者只要能力不要太差，都可以立即調整已經開始出現問題的政策，並將責任通通推給前任領導人，對內可以化解民怨，對外可以重新改善外交關係。比如美國前總統川普在任內，為了美國的利益，推動某些爭議政策，而與許多盟國出現衝突，拜登上任後雖然沒有完全取消川普的政策，但盟國會期待拜登政府有不一樣的作法，因而繼續與美國磋商，讓彼此的關係能維持，不至於完全決裂。</p>
+<p>中國雖然是一個集權國家，由共產黨長期執政，但過去採取集體領導的方式，其實也是非常聰明的。每個領導人兩任十年，時間到了就下台，讓國、內外都有所期待，也避免了一人執政太久的可能弊端。但是習近平打過了這個規則，打算終身獨攬大權，或許有人說，習近平承諾了只會再幹一任或兩任，但獨裁者是沒有回頭路的，一旦選擇了這條路，就一定要掌權到生命的最後一天，失去權力就等於失去生命，這在歷史上無一例外。就算習近平表面上卸任，也一樣會扶植傀儡上台，自己在背後垂簾聽政，有最終的決策權，就像鄧小平的晚年一樣，偏偏習近平沒有鄧小平那麼聰明，能確保中國朝正確方向發展。</p>
+<img src="https://images.vocus.cc/2e007898-35ee-415e-82ae-343214262f25.png" alt="袁世凱在稱帝之前，坐著轎子前往祭天，想要毀棄共和的意圖已昭然若揭。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">袁世凱在稱帝之前，坐著轎子前往祭天，想要毀棄共和的意圖已昭然若揭。</figcaption>
+<p>這就導致了一個問題，不論是中國人或是外國政府，都已認定習近平將長期統治中國，目前這種惡劣情勢不會因為領導人輪替而有所改變。看不到未來希望的中國人，只能選擇移民，想盡辦法離開中國。研判中國將持續走習近平強硬路線的外國政府，在美中對抗的大環境下，只能選擇站到美國陣營，這最明顯的就是日本。如我們之前討論過的，日本曾是最親中的國家，不止搶先跟中國建交，有很長一段時間嚴格遵守一中政策，絕不輕易得罪中國。甚至安倍首次擔任首相與第二次再度出任首相的前期，也都選擇與中國加強關係，但問題是習近平欠缺足夠的外交手腕與遠見，而讓中日關係江河日之。</p>
+<p>習近平在鞏固個人領導地位時，不意外也以煽動民族主義的方式來進行。但相較於前兩任領導人瞭解這種遊戲必需適可而止，避免傷害到國家利益，習近平卻不斷無限上綱，甚至最後形成了戰狼外交，導致日本的民意對中國越來越反感。在民選政府必需顧及民意下，逐漸疏離中國是必然的趨勢，原本希望利用中國來平衡美國壓力的日本，最後只能孤注一擲，走向親美反中的道路上。如今中日關係如此惡劣，習近平要負絕對的責任。如果習近平會下台，那安倍晉三的繼任者還能重起爐灶，改善目前的情況，但習近平的終身獨裁，讓這樣的希望破滅，日本政府只能被迫轉向。</p>
+<p>同樣的情況，也正出現在南韓、歐洲與東南亞國家，他們都已經發現未來十年都要面對習近平的執政，甚至未來二十年，中國都可能會奉行習近平路線。中國在短期內走回正軌的機會很低，而且隨著獨裁者逐漸老化顢頇，情況只會越變的越糟，這在歷史上屢見不鮮。日本是距離中國最近，與中國有許多地緣、歷史糾葛的國家，因此最早反應出這種情況，可以預見，南韓、歐洲與東南亞國家也會步上日本的後塵，只是程度依各國的國情而不同。習近平的路線讓這些國家失去了繼續與中國往來的紅利，卻要承擔美國的壓力，雖然美國口口聲聲說不會逼各國選邊站，但應該怎麼選卻已經再清楚不過。</p>
+<p>中國內部則開始爆發人材與財富外逃的現象，習近平堅持清零的殘酷封鎖措施只是導火線，更重要的是這些有辦法離開的人，不希望再被習近平統治十年、甚至是二十年，繼續待在壓力越來越大、越來越危險的國家中。這樣的情況將對中國造成很嚴重的傷害，因為缺少了人材與資金，中國的發展勢必會趨緩，而在美中兩國的競爭中，處於下風。最糟的是習近平不是不知道這樣的情況，但為了成功打破制度，終身執政，他沒有辦法承受任何的批評，而傾向把每一個提出建言的人視為政敵。這讓任何想挽救這種頹勢的建議，都沒有辦法被討論，反而是中國政府不斷增加言論控制的力道，讓百姓更為失望。</p>
+<p>有太多的政治人物在晚年逐步腐化，變成暴君，甚至有些在早期勤於政事，容得下批評的明君，在後期也是偏執多疑，最後鑄下大錯。習近平在連任後，幡然醒悟的可能性非常低，而隨著民怨越來越沸騰，他的不安全感絕對會越來越重。目前已經極為嚴厲的言論管制與整肅政敵的行動，絕對會再繼續升級，直到將所有人視為潛在敵人，四處濫捕為止。甚至像毛澤東一樣在晚年憂心失勢之時，掀起文化大革命，讓中國經歷十年浩劫。過去說習近平會重蹈覆轍，讓文化大革命再起，或許中國人會一笑置之，視為無稽之談，但在目前的情況下，誰還敢說這樣的情況不會發生？</p>
+<p>那些說習近平近來的倒行逆施，只是為了成功連任，等到他鞏固權位，就會回復正常的人，其實才是太天真、太鄉愿。因為習近平正把中國拖入一個萬劫不復的未來。會認為自己偉大到可以目空一切，一心想要稱帝的人，其實能力都不怎麼樣，你在台灣就可以看到這樣的例子，稍微有一點智慧的人，就知道絕不能這麼做。賴清德近來曾公開表示，習近平無視台灣不斷釋出的善意，最後導致兩岸關係緊張，自己陷入巨大壓力中，其實算是中肯之言。許多台灣內部的親中派，會將兩岸惡言相向的情況，歸咎於民進黨政府，但其實問題更大的是習近平。但親中派不敢去批評習近平，只能反過來施壓台灣政府，又何嘗不是習近平的幫兇之一，幫著習近平把中國推向四面楚歌的不利處境中。</p>
