--- a/_posts/2022-07-25-PQ-國民黨砸毀立院孫中山像修復需百萬-基進-不如改掛台灣地圖.html
+++ b/_posts/2022-07-25-PQ-國民黨砸毀立院孫中山像修復需百萬-基進-不如改掛台灣地圖.html
@@ -20,7 +20,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社.jpg" alt="" class="wp-image-109088" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社-300x213.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社-768x546.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>黃重諺王必勝總統府宣誓。圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社.jpg" alt="" class="wp-image-109088" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社-300x213.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/3aeeb2b0-黃重諺王必勝總統府宣誓。圖／中央社-768x546.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>黃重諺王必勝總統府宣誓。圖／中央社</figcaption></figure></div>
 
 
 
