--- a/_posts/2022-07-25-PQ-斯里蘭卡前總理當選總統-街頭抗議再起-他是前總統的人.html
+++ b/_posts/2022-07-25-PQ-斯里蘭卡前總理當選總統-街頭抗議再起-他是前總統的人.html
@@ -16,7 +16,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/0a59f3a8-fyiminnxkaarpcq.jpg" alt="" class="wp-image-109113" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/0a59f3a8-fyiminnxkaarpcq.jpg 650w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/0a59f3a8-fyiminnxkaarpcq-300x200.jpg 300w" sizes="(max-width: 650px) 100vw, 650px" /><figcaption>前總理威克瑞米辛赫（Ranil Wickremesinghe）2022年7月20日獲國會選舉成為新任總統。<br>圖／Ranil Wickremesinghe</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/0a59f3a8-fyiminnxkaarpcq.jpg" alt="" class="wp-image-109113" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/0a59f3a8-fyiminnxkaarpcq.jpg 650w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/0a59f3a8-fyiminnxkaarpcq-300x200.jpg 300w" sizes="(max-width: 650px) 100vw, 650px" /><figcaption>前總理威克瑞米辛赫（Ranil Wickremesinghe）2022年7月20日獲國會選舉成為新任總統。<br>圖／Ranil Wickremesinghe</figcaption></figure></div>
 
 
 
